--- a/11-arrays-loop.html
+++ b/11-arrays-loop.html
@@ -11,13 +11,102 @@
           console.log(myArray);
 
           console.log(myArray[1])*/
-
+/*
           let i = 1;
 
-          while (1 <= 5) {
+          while (i <= 5) {
             console.log(i);
-            i = i + 1;
+            i = i +1;
           }
+
+          for ( let i =1; i <=5; i++) {
+            console.log(i);
+          }
+
+          let randomNumber = 0;
+
+          while (randomNumber < 0.5) {
+            randomNumber = Math.random();
+          }
+
+          console.log(randomNumber);*/
+
+
+         /* const todoList = [
+          'make dinner',
+          'wash dishes',
+          'watch youtube'
+          ];
+
+          for ( let index = 0; index < todoList.length; index++) {
+            const value = todoList[index];
+            console.log(value);
+          }*/
+// accumulation patter... loop through an array.
+        /*  const nums =  [1, 1, 3];
+
+          let total = 0;
+
+          for (let i = 0; i < nums.length; i++) {
+            const num = nums[1]
+            total = total + num
+            }
+
+            console.log(total);
+
+            const numsDoubled = [];
+
+            for (let i = 0; i < nums.length; i++) {
+              const num = nums[i];
+              numsDoubled.push(num * 2);
+            }
+            console.log(numsDoubled);*/
+
+            const array1 = [1, 2, 3]
+            const array2 = array1.slice();
+            array2.push(4);
+            console.log(array1);
+            console.log(array2);
+
+            const [firstValue, secondValue] = [1, 2, 3];
+
+            for (let i = 1; 1<= 10; 1++) {
+              if (i % 6 === 0){
+                continue;
+              }
+              console.log(i);
+              if (i === 8) {
+                break;
+
+              }
+            }
+
+            let i =1;
+
+            while (i <= 10) {
+              if (1 % 3 === 0);
+              i++;
+              continue;
+              console.log(i);
+              i++;
+            }
+
+            function doubleArray (nums) {
+              const numsDoubled = [];
+
+              for (let i = 0; i < nums.length; i++) {
+                const num = nums[i];
+                if (num === 0) {
+                  return numsDoubled;
+                }
+                numsDoubled.push(num * 2);
+              }
+              return numsDoubled;
+          }
+
+          console.log(doubleArray([1, 1, 3]));
+          console.log(doubleArray([2, 2, 5]));
+
 
 
         </script>
