--- a/12-rock.html
+++ b/12-rock.html
@@ -8,22 +8,18 @@
 </head>
 <body>
     <p class="title">Rock paper Scissors</p>
-    <button onclick="
-      playGame('rock');
-      " class="move-button">
+    <button class="move-button js-rock-button">
       <img src="images/rock-emoji.png" class="move-icon">
     </button>
 
-    <button onclick="
-      playGame('paper');
-    " class="move-button">
+    <button class="move-button js-paper-button">
       <img src="images/paper-emoji.png" class="move-icon">
       Paper
     </button>
 
     <button onclick="
       playGame('scissors');
-    " class="move-button">
+    " class="move-button js-scissors-button">
       <img src="images/scissors-emoji.png" class="move-icon">
       Scissors
     </button>
